--- a/Cafeteria VS Files/CSS/contact.css
+++ b/Cafeteria VS Files/CSS/contact.css
@@ -1,8 +1,16 @@
-* {
-    margin: 10;
-    padding: 0;
-    box-sizing: border-box;
+html {
+    height: 100%;
 }
+
+body {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+    margin: 0;
+    padding: 0;
+    font-family: fantasy;
+}
+
 
 .logo{
     display: block;
@@ -52,46 +60,30 @@ a:hover {
     justify-content: space-around; 
 }
 
-h1 {
-    position: absolute;
-    top: 15%;
-    left: 50%;
 
-    transform: translate(-50%, -50%);
-    text-align: center;
-    color: black;
-    font-size: 45px;
-    font-family:fantasy;
-    font-weight: lighter;
-  }
-
-.container {
-    text-align: center;
-    max-width: 800px; 
-    margin: auto;
-}
-
-.content {
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-}
-
-.bio, .picture {
-    flex: 1; 
-    padding: 30px;
-}
-
-.bio {
-    max-width: 50%; 
+footer {
+    margin-top: 50px;
     text-align: left;
-    font-family:Verdana, Geneva, Tahoma, sans-serif
+    padding: 8px 0;
+    background: #333;
+    color: #fff;
+    font-size: 14px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+
 }
 
-.picture img {
-    width: 100%; 
-    max-width: 100%;
-    height: auto; 
-    display: block; 
+footer a {
+    color: whitesmoke; 
+    text-decoration: none;
+    font-size: 14px;
+    transition: color 0.3s ease;
+}
+
+footer a:hover{
+    color: red;
+}
+
+footer p, a{
+    margin-left: 20px;
 }
 
